--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hooks-yup-form": "^0.1.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "use-debounce": "^10.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
